--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -4,7 +4,10 @@
       <a class="nav-link" href="#">Active</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
+      <a class="nav-link" href="/courses/create">Insert</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/me/stored/courses">My courses</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
