--- a/src/resources/views/me/trashCourses.hbs
+++ b/src/resources/views/me/trashCourses.hbs
@@ -1,8 +1,6 @@
 <div class="container mt4">
-    <h3>My courses</h3>
-    {{#if deletedCount}}
-    <a href="/me/trash/courses">Bin ({{deletedCount}})</a>
-    {{/if}}
+    <h3>My courses deleted</h3>
+    <a href="/me/stored/courses">List of Courses</a>
     <table class="table table-dark table-striped">
         <thead>
             <tr>
@@ -10,7 +8,7 @@
                 <th>Name</th>
                 <th>Description</th>
                 <th>Image</th>
-                <th>createdAt</th>
+                <th>deletedAt</th>
                 <th>
                     Option
                 </th>
@@ -25,16 +23,16 @@
                 <td><img style="width: 100px;" src="{{this.image}}" alt=""></td>
                 <td>{{this.createdAt}}</td>
                 <td>
-                    <a href="/courses/{{this._id}}/edit" class="btn btn-link">Edit</a>
-                    <a href="" class="btn btn-link" data-toggle="modal" data-id="{{this._id}}"
-                        data-target="#delete-course-model">Delete</a>
+                    <a href="" class="btn btn-link btn-restore" data-id="{{this._id}}">Restore</a>
+                    <a href="" class="btn btn-link btn-danger" data-toggle="modal" data-id="{{this._id}}"
+                        data-target="#delete-course-model">Delete permanently</a>
                 </td>
             </tr>
             {{else}}
             <tr>
                 <td colspan="5" class="text-center">
-                    You haven't posted any course yet !!!
-                    <a href="/courses/create">Post the course</a>
+                    Empty Bin
+                    
                 </td>
             </tr>
             {{/each}}
@@ -54,7 +52,7 @@
                     </button>
             </div>
             <div class="modal-body">
-                Are you sure you want to delete ?
+                Are you sure you want to delete permanently ? You can't restore course !
             </div>
             <div class="modal-footer">
                 <button id="btn-delete-course" type="button" class="btn btn-danger" >Delete</button>
@@ -67,11 +65,16 @@
 {{!-- Delete form --}}
 <form method="POST" name="delete-course-form">
 </form>
+<form method="POST" name="restore-course-form">
+</form>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var courseId;
         var deleteForm = document.forms['delete-course-form'];
+        var restoreForm = document.forms['restore-course-form'];
         var btnDeleteCourse = document.getElementById('btn-delete-course');
+        var btnRestore=$('.btn-restore');
+
         $('#delete-course-model').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
             courseId = button.data('id');
@@ -79,8 +82,15 @@
         });
         //when delete course btn
         btnDeleteCourse.onclick = function () {
-            deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
+            deleteForm.action = '/courses/' + courseId + '/force?_method=DELETE';
             deleteForm.submit();
         }
+        btnRestore.click(function(e){
+            e.preventDefault();
+            var courseId=$(this).data('id');
+            restoreForm.action = '/courses/' + courseId + '/restore?_method=PATCH';
+            restoreForm.submit();
+            
+        });
     });
 </script>
